--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,19 @@
 * {
   font-family: Arial, Helvetica, sans-serif;
 }
+
 #leftside {
   width: 30%;
   min-height: 1200px;
   background-color: rgb(77, 192, 154);
 }
+
 #rightside {
   width: 70%;
   min-height: 1200px;
   background-color: rgb(238, 226, 192);
 }
+
 #container {
   background-color: rgba(255, 255, 255, 0.85);
   top: 15%;
@@ -19,16 +22,24 @@
   min-height: 1050px;
   border-radius: 0.7em; /* can be roughly converted to rounded-lg */
 }
+
 header {
   height: 50px;
   background-color: rgba(231, 229, 229, 0.5);
   font-size: 2.75em;
-  padding: 0.5em;
   color: rgb(216, 150, 7);
+  padding: 10px 20px;
+  border-bottom: 2px solid #ddd;
 }
+
 header span,
 header a {
   font-family: "Sacramento", cursive;
+}
+
+.nav {
+  gap: 30px;
+  font-size: 30px;
 }
 
 main h2 {
@@ -36,16 +47,18 @@ main h2 {
   top: 30px;
   color: rgb(60, 190, 160);
 }
+
 main #photos img {
   margin: 0.75em;
   border: 0.85em solid rgb(255, 255, 255);
 }
+
 section#blogposts {
-  position: absolute;
   left: 20%;
   top: 70px;
   padding: 50px;
 }
+
 main .post {
   margin: 25px;
   padding: 25px;
@@ -55,14 +68,11 @@ main .post {
 
 .profile-pic {
   width: 50px;
-  /* height: 50px; */
   cursor: pointer;
 }
 
 .floating-box {
-  position: absolute;
   background: rgba(0, 0, 0, 0.8);
-  color: white;
   padding: 15px;
   border-radius: 8px;
   top: 50%;
@@ -72,68 +82,24 @@ main .post {
 }
 
 .close-btn {
-  float: right;
   cursor: pointer;
 }
 
 .comment-header {
-  display: flex;
-  align-items: center; /* Vertically center items */
-  gap: 10px; /* Space between profile picture and text */
+  gap: 10px;
 }
 
 .bio-header {
   font-size: larger;
-  font-weight: bold;
 }
 
 .bio {
   margin-top: -16px;
-  margin-bottom: 30px;
 }
 
 footer {
-  position: absolute;
   bottom: 0;
   height: 50px;
   width: 100%;
-  text-align: center;
   font-size: 0.85em;
-}
-
-/* Nav */
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #fff;
-  padding: 10px 20px;
-  border-bottom: 2px solid #ddd;
-}
-
-.logo {
-  /* font-size: 24px; */
-  font-weight: bold;
-}
-
-.nav-links {
-  list-style: none;
-  display: flex;
-  gap: 30px;
-  margin: 0;
-  padding: 0;
-  font-size: 30px;
-}
-
-.nav-links li {
-  display: inline;
-}
-
-.nav-links a {
-  text-decoration: none;
-  font-weight: bold;
-}
-
-.nav-links a:hover {
-  text-decoration: underline;
 }
